-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 1.8.9
-
None
-
3
-
7605
b1_8 lfsck test log shows
lfsck 1.42.6.wc2 (10-Dec-2012) lfsck: ost_idx 0: pass1: check for duplicate objects lfsck: ost_idx 0: pass1 OK (20 files total) lfsck: ost_idx 0: pass2: check for missing inode objects [0]: failed to recreate /mnt/lustre/d0.lfsck/testfile.7 missing obj 0:12 lfsck: ost_idx 0: pass2 ERROR: 1 dangling inodes found (21 files total)
The maloo report is at https://maloo.whamcloud.com/test_sessions/61ecab6c-a051-11e2-898f-52540035b04c
- is related to
-
LU-3041 Interop 1.8.9<->2.4 failure on test suite lfsck
-
- Resolved
-