LU-3132 lfsck: fix the wrong data pointer

The patch is to pass a correct data pointer of struct lu_fid or
struct ll_recreate_obj to ioctl in lfsck_recreate_obj().

Signed-off-by: Liu Ying <emoly.liu@intel.com>
Change-Id: I8301f311cc5aaf57ae51ceaeb74db25fe61b5cd6